--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IDEA Files
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# Other Language Built Files
+target/
+node_modules/
+*.pyc
+
+# Others
+*.DS_Store
