--- a/basic/Java/DataManage-GetRow/pom.xml
+++ b/basic/Java/DataManage-GetRow/pom.xml
@@ -2,21 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <groupId>com.aliyun.tablestore.basic</groupId>
         <artifactId>JavaParent</artifactId>
+        <groupId>com.aliyun.tablestore.basic</groupId>
         <version>0.0.1</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>DataManage</artifactId>
-    <version>0.0.1</version>
-
+    <artifactId>DataManage-GetRow</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.aliyun.tablestore.basic</groupId>
             <artifactId>Common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.tablestore.basic</groupId>
+            <artifactId>DataManage</artifactId>
             <version>0.0.1</version>
         </dependency>
     </dependencies>
